// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsCloud should render correctly with active tag (snapshot) 1`] = `
<div>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#f59f00",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/JavaScript"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      JavaScript
         
      10
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#767676",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/Web%20Development"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Web Development
         
      30
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#767676",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/Frontend%20Development"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Frontend Development
         
      20
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#767676",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/React"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      React
         
      5
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#767676",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/Redux"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Redux
         
      1
    </a>
  </span>
  <span
    className="ant-tag mb-3 bg-primary border-primary"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    <a
      className="text-lg font-extrabold text-light"
      href="/tags"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      All
    </a>
  </span>
</div>
`;

exports[`TagsCloud should render correctly without active tag (snapshot) 1`] = `
<div>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#7048e8",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/Web%20Development"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Web Development
         
      30
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#37b24d",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/Frontend%20Development"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Frontend Development
         
      20
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#f59f00",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/JavaScript"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      JavaScript
         
      10
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#1890ff",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/React"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      React
         
      5
    </a>
  </span>
  <span
    className="ant-tag ant-tag-has-color mb-3"
    style={
      Object {
        "backgroundColor": "#1890ff",
      }
    }
  >
    <a
      className="text-lg font-extrabold"
      href="/tag/Redux"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Redux
         
      1
    </a>
  </span>
</div>
`;
